main: Fix crash when browsing Euronews source

In some locations, because the Euronews source would give out broken
URIs such as:
UNAVAILABLEUNAVAILABLE playpath=UNAVAILABLE swfVfy=1 swfUrl=http://euronews.com/media/player_live_1_14.swf live=1

https://bugzilla.gnome.org/show_bug.cgi?id=731224